add Login page, dockerize web api app

--- a/index-template.html
+++ b/index-template.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Roboto+Mono|Material+Icons' rel="stylesheet">
+    <link rel="stylesheet" href="https://www.herokucdn.com/purple3/latest/purple3.min.css">
     <title>Hello</title>
   </head>
   <body>
 
-    <script>
-      var isFirefox = typeof InstallTrigger !== 'undefined';
-      var isChrome = !!window.chrome && (!!window.chrome.webstore || !!window.chrome.runtime);
-      var isEdgeChromium = isChrome && (navigator.userAgent.indexOf("Edg") != -1);
-      var isEdge = !isIE && !!window.StyleMedia;
-      var isIE = /*@cc_on!@*/false || !!document.documentMode;
-      if(isIE || isEdge)
-        alert("Please use Firefox or Chrome.")
-
-    </script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
